assets/css/styles.css
/* Asterik wildcard selector to override default styles added by the browser*/

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Harry Potter Font*/
@font-face {
    font-family: 'HarryPotter';
    src: url('../fonts/HarryPotter-ov4z.ttf') format('truetype');
}

/* General Styles*/

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: "MedievalSharp", cursive;
    font-size: 1.2rem;
    background:     linear-gradient(rgba(35, 67, 114, 0.25), rgba(35, 67, 114, 0.35)
      ), url('../images/hogwartsBg.webp') no-repeat center/cover;
    background-attachment: fixed;
}

/* header*/
header {
    text-align: center;
    color: #fff;
}

h1 {
    line-height: 80px;
    letter-spacing: 2px;
    font-size: 3rem;
    font-family: 'HarryPotter', sans-serif;
    margin-top: 50px;
    text-shadow:3px 3px 2px #000;
}

h2 {
    font-size: 2rem;
    text-shadow:3px 3px 2px #000;
}

/* General main content styles for all pages */

main {
    flex: 1 0 auto;
    margin-top: 100px;
}

/* Style the buttons that are used to open and close the accordion panel */

.container {
    max-width: 700px;
    margin: 0 auto;
}

.accordion {
    background-color: #234372;
    color: #fff;
    cursor: pointer;
    padding: 1em;
    transition: 0.4s;
    width: 100%;
    text-align: start;
    margin-bottom: 1.2em;
    font-size: 1.6rem;
    font-family: inherit;
}

.panel {
    padding: 1.2em;
    display: none;
    overflow: hidden;
    color: #fff;
    background-color: rgba(60, 60, 60, 0.6);
}

.panel>p {
    padding-bottom: 1em;
}

.panel ul {
    padding-left: 0.8em;
}

.panel>div {
    display: flex;
    flex-direction: column;
    gap: 1em;
    margin-top: 1em;
}

/* Enter Potterville button Animation frames - from chatGPT*/
@keyframes magic-glow {
    0% {
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    }

    50% {
        box-shadow: 0 0 20px rgba(255, 255, 255, 1);
    }

    100% {
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    }
}

.play-container {
    padding: 0.8em;
    background-color: rgba(35, 67, 114, 0.8);
    width: 50%;
    margin: 1em auto;
    cursor: pointer;
    text-align: center;
    animation: magic-glow 1.5s infinite ease-in-out;
    transition: transform 0.3s ease;
}

.play-link {
    text-decoration: none;
    color: #e9a662;
    font-size: 1.6rem;
}

.play-container:hover {
    transform: scale(1.05);
}

/* General Styles for game.html, end.html and 404.html section containers*/

#game-section,
#score-section,
#section-404 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.game-container,
.score-container {
    max-width: 800px;
    width: 100%;
    background-color: rgba(233, 166, 98, 0.3);
    border-radius: 5px;
    color: #fff;
    padding: 1em;
}

/* Game Page*/

/* background colors based on user answers*/

.correct {
    background-color: rgba(52, 167, 52, 0.6);
}

.wrong {
    background-color: rgba(224, 133, 41, 0.5);
}

.ques-timer {
    display: flex;
    justify-content: space-between;
    margin-bottom: 1em;
}

#spellboard {
    margin: 0.8em 0;
    background-color: #234372;
    padding: 0.6em;
    font-weight: bold;
}

#spellboard h4 {
    letter-spacing: 2px;

}

#ques-title {
    background-color: #7898ac;
    padding: 0.6em 1em;
    color: #234372
}

fieldset {
    padding: 0.4em;
    margin-top: 0.6em;
    background-color: #234372;
}

#categories-container {
    display: grid;
    grid-template-columns: auto auto;
    gap: 1em;
    margin-top: 1em;
}

.categ-btn,
.quit-game {
    padding: 0.6em 1em;
    font-size: 1.2rem;
    background-color: #524125;
    box-shadow: 3px 3px 2px 2px #e9a662;
    border-radius: 4px;
    color: #fff;
    cursor: grabbing;

}

#input-container {
    margin-top: 1em;
}

#answer {
    padding: 0.7em;
    background-color: rgb(255, 255, 255, 0.4);
    border: 2px solid #e9a662;
    color: #524125;
    font-weight: bold;
    font-size: 1.2rem;
}

.submit-btn {
    padding: 0.7em 1em;
    font-size: 1.6rem;
    font-family: inherit;
    margin-top: 1em;
    background-color: #524125;
    color: #fff;
    border: 1px solid #e9a662;
    border-radius: 4px;
}

.quit-game {
    font-size: 1.3rem;
    margin: 2em 0;
}

.quit-game a {
    text-decoration: none;
    color: #fff;
}

.hide {
    display: none;
}

.unhide {
    display: block;
}


/* End Page */

.score-container {
    background-color: rgba(35, 67, 114, 0.7);
}

/* Glow animation for heading - chatGPT*/

@keyframes glow {
    to {
        text-shadow: 0 0 10px #524125, 0 0 20px #524125, 0 0 30px #524125, 0 0 40px #524125, 0 0 50px #524125, 0 0 60px #524125, 0 0 70px #524125;
    }
}

.glow-text {
    text-align: center;
    text-shadow: 0 0 5px #e9a662, 0 0 10px #e9a662, 0 0 15px #e9a662, 0 0 20px #e9a662, 0 0 25px #e9a662, 0 0 30px #e9a662, 0 0 35px #e9a662;
    animation: glow 1.5s infinite alternate;
    margin-bottom: 1em;
    font-size: 160%;
}

.scores>h4 {
    padding: 0.6em;
}

audio {
    margin: 2em;
}

.reset {
    text-align: center;
}

/* General Style for both End Page and 404 Page Button */

.play-again, .take-home {
    padding: 0.6em 1em;
    background-color: #234372;
    font-size: 1.5rem;
    cursor: grab;
    color: #fff;
    border-radius: 4px;
    border: 1px solid #fff;
    margin-top: 1em;
}

.scores i {
    padding: 0 0.6em 0;
}

/* 404 Page */
#section-404 {
    margin-top: 3em;
}

.error-div{
  text-align: center;
}

.error-div h4 {
    padding: 0.6em;
}

.take-home {
    text-decoration: none;
    color:#fff;
    display: inline-block;
}

/* footer */
footer {
    color: #fff;
    line-height: 3em;
    text-align: center;
    font-size: 80%;
}

